--- a/rotate.css
+++ b/rotate.css
@@ -54,3 +54,18 @@
     text-align: left;
     white-space: nowrap; /*whether to display in one line or not*/
   }
+
+  .fixed_headers {
+    table-layout: fixed;
+    border-collapse: collapse;
+  }
+  
+  .fixed_headers thead tr {
+    display: block;
+    position: relative;
+  }
+  .fixed_headers tbody {
+    display: block;
+    overflow: auto;
+    height: 300px;
+  }
