--- a/splash.css
+++ b/splash.css
@@ -3,10 +3,24 @@ body {
 }
 
 #splashscreen {
+    /* display:none; */
     position:absolute;
     top:0;
     left:0;
     bottom:0;
     width:100%;
     background-color:white;
+    margin: 0;
 }
+
+#container {
+    /* display:none; */
+    position:absolute;
+    top:0;
+    left:0;
+    bottom:0;
+    width:100%;
+    background-color: #2b2b2b;
+    margin: 0;
+}
+
